Added few tests